refactored router and provider organization

--- a/myBricks_frontend/package.json
+++ b/myBricks_frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "CSS": "npx @tailwindcss/cli -i ./src/css/input.css -o ./src/css/output.css --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
